[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Survival/PickUp.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Animators/SpritePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Physics/DetectBox.tscn" type="PackedScene" id=3]

[node name="PickUp" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SpritePlayer" parent="." instance=ExtResource( 2 )]

[node name="EntityCollisionBox" parent="." instance=ExtResource( 3 )]
margin_right = 10.0
margin_bottom = 10.0
color = Color( 1, 0.92549, 0.32549, 1 )

[node name="EntitySpriteBox" parent="." instance=ExtResource( 3 )]

[connection signal="anim_finished" from="SpritePlayer" to="." method="_on_SpritePlayer_anim_finished"]
[connection signal="anim_started" from="SpritePlayer" to="." method="_on_SpritePlayer_anim_started"]
